--- a/_includes/default.html
+++ b/_includes/default.html
@@ -7,12 +7,17 @@
 
   <link href="/public/css/style.css" rel="stylesheet">
   <body>
-  	<div class="container"> 
+	<div class = "layout">
+		<div class = "topLayout">
+			{% include topLayout.html %}
+		</div> 
 		<div class="sidebar">
 			{% include sidebar.html %}
 		</div>
-		<div class="content">
-			{{ content }}
+		<div class="container"> 
+			<div class="content">
+				{{ content }}
+			</div>
 		</div>
 	</div>
   </body>
