--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
-@import url(//fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
-@import url('https://fonts.googleapis.com/css?family=Gelasio|Kulim+Park|Nanum+Myeongjo|Nanum+Gothic|Noto+Sans|Noto+Sans+KR|Roboto&display=swap');
 @import url(syntax/monokai.css);
+@font-face {
+	font-family: 'Pretendard Variable'
+	src: url('/font/PRETENDARDVARIABLE.TTF') format('truetype')
+}
 
 :root {
   --blue: #007bff;
@@ -29,8 +31,8 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Roboto", "Nanum Gothic";
-  --font-family-serif: "Nanum Myeongjo";
+  --font-family-sans-serif: "Pretendard Variable";
+  --font-family-serif: "Pretendard Variable";
 }
 
 * {
@@ -46,10 +48,11 @@ html {
 }
 
 body {
+	
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: 'Gelasio', 'Nanum Myeongjo', serif;
+	font-family: 'Pretendard Variable';
 	color: #2c3e50;
 }
 
@@ -73,33 +76,56 @@ pre {
 }
 
 code {
-	font-family: "Menlo", "Consolas", monospace;
+	font-family: "Consolas";
 	font-size: 0.8em;
 	margin: 0px;
 }
 
+.logo {
+	font-weight:900;
+	font-size: 25px;
+	letter-spacing: -1px;
+	color: #003348;
+}
+
+.topLayout {
+	display: grid;
+ 	place-items: center;
+	position: fixed;
+	top: 0; /* 맨 위에 고정 */
+	height: 70px;
+	width: 100%;
+	z-index: 1000; /* 다른 요소들 위에 위치하도록 함 */
+	background-color: rgb(255, 255, 255);
+	border-bottom: 0.3px 004D6B;
+}
+
 .container {
+	margin-top: 70px; /* topLayout의 높이만큼 상단 마진 추가 */
 	min-height: 100%;
+	margin-left: 200px;
 	display: flex;
 	justify-content: space-between;
 	flex-flow: row nowrap;
 }
 
 .content {
-	/*margin-left: 180px;*/
 	flex: 1 1 auto;
 	padding: 0px 30px;
 }
 
 .sidebar {
-	/*position: fixed;*/
+	width: 200px;
+	height: 100%;
+	left: 0;
+	position: fixed;
 	display: flex;
 	flex-flow: column nowrap;
 	flex: 0 0 220px;
 	padding: 15px;
 	z-index: 1;
-	background-color: #222;
-	color: #fff;
+	background-color: #F8F8F8;
+	color: #000000;
 }
 
 .sidebar-item {
@@ -111,11 +137,11 @@ code {
 	padding-inline-start: 0px;
 }
 
-.sidebar-brand > a {
+/* .sidebar-brand > a {
 	font-size: 300%;
-	font-family: 'Gelasio';
+	font-family: 'Pretendard Variable';
 	color: #fff;
-}
+} */
 
 .lead {
 	font-size: 120%;
@@ -132,16 +158,14 @@ code {
 
 .nav-title {
 	font-size: 100%;
-	font-family: "Noto Sans";
-	text-transform: uppercase;
+	font-family: "Pretendard Variable";
 	border-bottom: 1px solid gray;
 	margin-bottom: 5px;
 }
 
 a.nav-item {
 	font-size: 120%;
-	font-family: "Noto Sans";
-	text-transform: capitalize;
+	font-family: "Pretendard";
 	color: #aaa;
 }
 
@@ -150,9 +174,6 @@ a.nav-item:hover { color: #777; }
 .badge { font-size: 70%; }
 .badge::before { content: "("; }
 .badge::after { content: ")"; }
-
-.post-list > li {
-}
 
 .post-link {
 	margin-left: 10px;
@@ -232,7 +253,7 @@ article h3,
 article h4,
 article h5,
 article h6 {
-	font-family: "Roboto", "Nanum Gothic";
+	font-family: "Pretendard Variable";
 	color: #333;
   	margin-bottom: 0;
 }
@@ -283,14 +304,14 @@ header.home {
 
 footer {
 	padding-top: 15px;
-	font-family: 'Ubuntu';
+	font-family: 'Pretendard Variable';
 }
 
 .sidebar-footer {
 	margin-top: 80px;
 	font-size: 0.75em;
 	font-weight: lighter;
-	font-family: "Roboto";
+	font-family: "Pretendard Variable";
 	line-height: 1.5;
 }
 
@@ -300,6 +321,7 @@ footer {
 
 
 @media (max-width: 576px) {
+	
 	article {
 		font-size: 0.9em;
 		line-height: 1.5;
@@ -307,18 +329,18 @@ footer {
 
 	.content {
 		padding: 0px;
-	}
-	.container {
-	    flex-direction: column;
+		margin-top: 110px;
 	}
 
 	.sidebar {
+		width: 100%; /* 모바일 환경에서는 너비를 100%로 설정 */
 		font-size: 0.8em;
 		flex: 0 0 auto;
 		flex-flow: row nowrap;
 		height: auto;
 	}
 
+	
 	.sidebar-nav {
 		margin: 0px;
 	}
@@ -336,4 +358,14 @@ footer {
 		visibility: hidden;
 		display: none;
 	}
+	
+	.container {
+		left: 0;
+		flex-direction: column;
+		width: 100%; /* 모바일 환경에서는 너비를 100%로 설정 */
+		min-height: 100%;
+		margin-left: 0px;
+		display: flex;
+	}
+
 }
