--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,37 +1,101 @@
-<div class="sidebar-item sidebar-nav">	<!-- 프롤로그-->
+<!-- <div class="sidebar-item sidebar-nav">	프롤로그
 	<ul class="nav">
-		<li class="nav-title">Pages</li>	<!--프롤로그명 -->
-		<li> <a class="nav-item" href="/">Articles</a> </li> <!--항목 1 -->
-		<li> <a class="nav-item" href="/about/">About</a> </li> <!--항목 2 -->
+		<li class="nav-title">Pages</li>	프롤로그명
+		<li> <a class="nav-item" href="/">Articles</a> </li> 항목 1
+		<li> <a class="nav-item" href="/about/">About</a> </li> 항목 2
 	</ul>
-</div>
+</div> 
+-->
+
 <div class="sidebar-item sidebar-nav"> <!--카테고리 분류 1 -->
 	<ul class="nav">
-			<li class="nav-title">Categories</li>	<!--카테고리 분류명 -->
+			<li class="nav-title">
+				<img src= "../public/img/folder.png">
+				컴퓨터과학
+			</li>	<!--카테고리 분류명 -->
 		<li>
 			<a class="nav-item" href="/category/#sample"> <!--항목 1 -->
-				<span class="name">sample</span>
-				<span class="badge">1</span>
+				<span class="name">자료구조</span>
+				<!-- <span class="badge">1</span> -->
 			</a>
 		</li>
 		
 		<li>
 			<a class="nav-item" href="/category/#jekyll"> <!--항목 2 -->
-				<span class="name">jekyll</span>
-				<span class="badge">1</span>
-			</a>
-		</li>
-		
-		<li>
-			<a class="nav-item" href="/category/#update"> <!--항목 3 -->
-				<span class="name">update</span>
-				<span class="badge">1</span>
+				<span class="name">알고리즘</span>
+				<!-- <span class="badge">1</span> -->
 			</a>
 		</li>
 		
 	</nav>
 	</ul>
 </div>
+
+<div class="sidebar-item sidebar-nav"> <!--카테고리 분류 2 -->
+	<ul class="nav">
+			<li class="nav-title"><img src= "../public/img/folder.png">웹개발</li>	<!--카테고리 분류명 -->
+		<li>
+			<a class="nav-item" href="/category/#sample"> <!--항목 1 -->
+				<span class="name">HTML</span>
+				<!-- <span class="badge">1</span> -->
+			</a>
+		</li>
+		
+		<li>
+			<a class="nav-item" href="/category/#jekyll"> <!--항목 2 -->
+				<span class="name">CSS</span>
+				<!-- <span class="badge">1</span> -->
+			</a>
+		</li>
+
+		<li>
+			<a class="nav-item" href="/category/#jekyll"> <!--항목 2 -->
+				<span class="name">Javascript</span>
+				<!-- <span class="badge">1</span> -->
+			</a>
+		</li>
+		
+	</nav>
+	</ul>
+</div>
+
+<div class="sidebar-item sidebar-nav"> <!--카테고리 분류 3 -->
+	<ul class="nav">
+			<li class="nav-title"><img src= "../public/img/folder.png">코딩테스트</li>	<!--카테고리 분류명 -->
+		<li>
+			<a class="nav-item" href="/category/#sample"> <!--항목 1 -->
+				<span class="name">Python</span>
+				<!-- <span class="badge">1</span> -->
+			</a>
+		</li>
+		
+	</nav>
+	</ul>
+</div>
+
+<div class="sidebar-item sidebar-nav"> <!--카테고리 분류 4 -->
+	<ul class="nav">
+			<li class="nav-title"><img src= "../public/img/folder.png">기타</li>	<!--카테고리 분류명 -->
+		<li>
+			<a class="nav-item" href="/category/#sample"> <!--항목 1 -->
+				<span class="name">Git</span>
+				<!-- <span class="badge">1</span> -->
+			</a>
+		</li>
+		
+		<li>
+			<a class="nav-item" href="/category/#jekyll"> <!--항목 2 -->
+				<span class="name">정보</span>
+				<!-- <span class="badge">1</span> -->
+			</a>
+		</li>
+		
+	</nav>
+	</ul>
+</div>
+
+
+
 <div class="sidebar-item sidebar-footer">
 	<!-- 인스타, 메일 추가 예정 -->
 </div>
